--- a/style.css
+++ b/style.css
@@ -131,5 +131,6 @@ font-family: 'roboto Slab', serif;
 text-align: center;
 font-size: 20px;
 cursor: pointer;
-margin-top: 10%;
+margin-top: 30px;
+margin-bottom: 10px;
 }
