--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ border-radius: 30px;
 width: 100px;
 }
 .link-item:hover {
-    scale: 1,5;
+    transform: scale(1.3);
 border-radius: 25px;
 }
 .link-item:nth-of-type(1):hover {
