--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ color: inherit;
 text-decoration: none;
 }
 body{
-    background-color: rgb(255, 244, 144);
+    background-color: #ffffbc;
 background-repeat: no-repeat;
 }
 span {
