--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ background-size: 100px;
 border-radius: 30px;
 width: 100px;
 }
-.link-item:nth-of-type(3) {
+/* .link-item:nth-of-type(3) {
     background-image: url(./whatback.png);
 border-radius: 30px;
 width: 100px;
@@ -93,7 +93,7 @@ width: 100px;
 .link-item:nth-of-type(4) {
     background-color: rgb(166, 0, 199);
 border-radius: 30px;
-width: 100px;
+width: 100px; */
 }
 .link-item:nth-of-type(5) {
     background-color: rgb(0, 110, 255);
