--- a/style.css
+++ b/style.css
@@ -115,12 +115,12 @@ border-radius: 25px;
 .link-item:nth-of-type(2):hover {
     box-shadow: #84318f 7px 7px 10px;
 }
-.link-item:nth-of-type(3):hover {
+/* .link-item:nth-of-type(3):hover {
     box-shadow: #26d367 7px 7px 10px;
 }
 .link-item:nth-of-type(4):hover {
     box-shadow: rgb(166, 0, 199) 7px 7px 10px;
-}
+} */
 .link-item:nth-of-type(5):hover {
     box-shadow: rgb(0, 110, 255) 7px 7px 10px;
 }
