--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ width: 100px; */
     background-color: rgb(0, 110, 255);
 border-radius: 30px;
 width: 100px;
+background-size: 100px;
 }
 .link-item:nth-of-type(4) {
     background-color: rgb(241, 231, 87);
